Ajout parti 2 body ( debut )

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
 
+<div class="body-parti2"></div>
 
+	<h3 class="text-center">Explorez le monde</h3>
+	<h5 class="text-center">Découvrez les destinations les plus prisées à travers le monde.</h5>
+	<div class="row">
+
+		<div class="text-center medium-8 columns"><img src="http://placehold.it/400x250">
+        </div>	
+
+
+	</div>
 	
+</div>
+
 </body>
 </html>
