--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="foundation/css/foundation.min.css">
 	<link rel="javascript" type="text/javascript" href="script.js">
+	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -138,11 +139,13 @@
 			<div class="text-center"><h5>Rejoignez-nous sur</h5>
 			
 		<div class="icone">
-			<i class="fa fa-facebook-official fa-4x" aria-hidden="true"></i>
-			<i class="fa fa-twitter fa-4x" aria-hidden="true"></i>
-			<i class="fa fa-google fa-4x" aria-hidden="true"></i>
-		</div>
-
+			
+			<i class="fa fa-facebook-official" aria-hidden="true"></i>
+			<i class="fa fa-twitter-official" aria-hidden="true"></i>
+			<i class="fa fa-google" aria-hidden="true"></i>
+			<i class="fa fa-linkedin" aria-hidden="true"></i>
+			<i class="fa fa-pinterest" aria-hidden="true"></i>
+			
 			</div>
 
 		</footer>
