--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 
 <div class="row">
 	<div class="medium-8 columns"><img src="https://placehold.it/350x150"></div>
-	<div class="medium-4 columns"><h1>Ouvrez la porte à un voyageur et à une nouvelle vie</h1><p>gagnez de l'argent en accueillant des voyageurs</p>
-		<a href="#" class="button">Estimer mes revenus</a>
+	<div class="medium-4 columns"><h4><strong>Ouvrez la porte à un voyageur et à une nouvelle vie</strong></h4><p>gagnez de l'argent en accueillant des voyageurs</p>
+		<a href="#" class="button"><strong>Estimer mes revenus</strong></a>
 	</div>
 </div>
 
 <div class="row">
-	<div class="medium-12 columns"><h1>Juste pour le week-end</h1><p>Découvrez de nouveaux logements incroyables près de chez vous.</p></div>
+	<div class="medium-12 lare-centered columns"><h1>Juste pour le week-end</h1><p>Découvrez de nouveaux logements incroyables près de chez vous.</p></div>
 </div>
 
 <div class="row">
-	<div class="medium-4 columns">
+	<div class="medium-3 columns">
 		<img src="https://placehold.it/250x250">
 		<div class="small-6 columns"><h4>Lille</h4></div>
 	</div>
@@ -65,7 +65,7 @@
 		<div class="small-6 columns"><h4>Londres</h4></div></div>
 	</div>
 </div>
-<a href="#" class="button">Voir toutes les destinations</a>
+<a href="#" class="button"><strong>Voir toutes les destinations</strong></a>
 
 </body>
 </html>
