--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<h3 class="text-center">Explorez le monde</h3>
 		<h5 class="text-center">Découvrez les destinations les plus prisées à travers le monde.</h5>
 		<div class="row medium-uncollapse">
-				<div class="medium-6 medium-offset-1 columns"><img src="http://placehold.it/550x250"></div>
+				<div class="medium-6 medium-offset-1 columns"><h1>Teste</h1><img src="http://placehold.it/550x250"></div>
 				<div class="medium-4 medium-offset-1 columns"><img src="http://placehold.it/250x250"></div>
 		</div>
 
@@ -85,7 +85,7 @@
 					<div class="small-6 columns"><h4>Londres</h4></div></div>
 			</div>
 </div>
-<a href="#" class="button">Voir toutes les destinations</a>	
+<a href="#" class="button"><strong>Voir toutes les destinations</strong></a>
 	</div>
 
 	<!-- ici commence le footer -->
