Reorganisation de la partie 1

--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
 		</div>
 	</header>	
 	
-	
+
 	<!-- Ici Commence la partie 1 -->
 
 	<div class="row">
 		<div class="medium-8 columns"><img src="https://placehold.it/350x150"></div>
-		<div class="medium-4 columns"><h4><strong>Ouvrez la porte à un voyageur et à une nouvelle vie</strong></h4><p>gagnez de l'argent en accueillant des voyageurs</p>
+		<div class="medium-4 columns">
+			<h4><strong>Ouvrez la porte à un voyageur et à une nouvelle vie</strong></h4>
+			<p>gagnez de l'argent en accueillant des voyageurs</p>
 			<a href="#" class="button"><strong>Estimer mes revenus</strong></a>
 		</div>
 	</div>
@@ -91,10 +93,10 @@
 			<img src="https://placehold.it/250x250">
 			<div class="small-6 columns"><h4>Bruxelles</h4></div>
 		</div>
-	</div>
-	<div class="medium-4 columns">
-		<img src="https://placehold.it/250x250">
-		<div class="small-6 columns"><h4>Londres</h4></div>
+		<div class="medium-4 columns">
+			<img src="https://placehold.it/250x250">
+			<div class="small-6 columns"><h4>Londres</h4></div>
+		</div>
 	</div>
 	<a href="#" class="button"><strong>Voir toutes les destinations</strong></a>
 
