--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 
 	<div class="row">
 		<div class="medium-8 columns"><img src="https://placehold.it/350x150"></div>
-		<div class="medium-4 columns"><h4><strong>Ouvrez la porte à un voyageur et à une nouvelle vie</strong></h4><p>gagnez de l'argent en accueillant des voyageurs</p>
+		<div class="medium-4 columns"><h4><strong>Ouvrez la porte à un voyageur et à une nouvelle vie</strong></h4><p>Gagnez de l'argent en accueillant des voyageurs</p>
 			<a href="#" class="button"><strong>Estimer mes revenus</strong></a>
 		</div>
 	</div>
 
 	<div class="row">
-		<div class="medium-12 lare-centered columns"><h1>Juste pour le week-end</h1><p>Découvrez de nouveaux logements incroyables près de chez vous.</p></div>
+		<div class="medium-12 large-centered columns"><h3><strong>Juste pour le week-end</strong></h3><p>Découvrez de nouveaux logements incroyables près de chez vous.</p></div>
 	</div>
 
 	<div class="row">
