--- a/index.html
+++ b/index.html
@@ -3,104 +3,91 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Airbnb Foundation</title>
-
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="foundation/css/foundation.css">
-	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.css">
-
+	<link rel="stylesheet" href="foundation/css/foundation.min.css">
+	<link rel="javascript" type="text/javascript" href="script.js">
+	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 </head>
 <body>
 
-</html>
+	
+	</html>
 
 	<header>
-		<div class="top-bar">
-			<div class="top-bar-left">
-				<ul class="menu">
-					<li><a href="#">Airbnb</a></li>
-					<li><i class="fa fa-search" aria-hidden="true"></i> </li>
-					<li><input type="search" placeholder="Où ?"></li>
-				</ul>
-			</div>
-			<div class="top-bar-right">
-				<ul class="menu">
-					<li><a href="#">Devenez Hôte</a></li>
-					<li><a href="#">Aide</a></li>
-					<li><a href="#">Inscription</a></li>
-					<li><a href="#">Connexion</a></li>
-				</ul>
-			</div>
-		</div>
-
 		<div class="row">
-			<div class="medium-12 columns"><img src="https://placehold.it/1200x500" alt="Vidéo de présentation"></div>
-			<div class="row">
-				<div class="medium-4 columns medium-centered text-center"><h2><strong>Vivez là-bas</strong></h2></div>
-			</div>
-			<div class="row">
-				<div class="medium-9 columns medium-centered text-center"><h6>Réservez des logements auprès d'hôtes locaux dans plus de 191 pays et vivez comme là-bas, comme chez vous.</h6></div>
-			</div>
-			<div class="row">
-				<div class="medium-10 columns medium-offset-1">
-					<div class="row">
-						<form action="">
-							<div class="medium-4 columns"><input type="search" placeholder="Où ?"></div>
-							<div class="medium-2 columns"><input type="date" placeholder="Arrivée"></div>
-							<div class="medium-2 columns"><input type="date" placeholder="Départ"></div>
-							<div class="medium-2 columns">
-								<label>
-									<select>
-										<option value="1 Voyageur">1 Voyageur</option>
-										<option value="2 Voyageurs">2 Voyageurs</option>
-										<option value="3 Voyageurs">3 Voyageurs</option>
-										<option value="4 Voyageurs">4 Voyageurs</option>
-										<option value="5 Voyageurs">5 Voyageurs</option>
-										<option value="6 Voyageurs">6 Voyageurs</option>
-										<option value="7 Voyageurs">7 Voyageurs</option>
-									</select>
-								</label>
-							</div>
-							<div class="medium-2 columns"><input type="submit" class="alert button" value="Rechercher"></div>
-						</form>
+			<div class="medium-1 columns">Airbnb</div>
+			<div class="medium-1 columns">Où </div>
+			<div class="medium-2 columns medium-offset-5">Devenez hôte</div>
+			<div class="medium-1 columns">Aide</div>
+			<div class="medium-1 columns">Inscription</div>
+			<div class="medium-1 columns">Connexion</div>
+		</div>
+		<div class="row">
+			<div class="medium-12 columns"><img src="https://placehold.it/1200x500" alt="Vidéo de présentation">
+				<div class="row">
+					<div class="medium-4 columns medium-offset-4">Vivez là-bas</div>
+				</div>
+				<div class="row">
+					<div class="medium-8 columns medium-offset-2">Réservez des logements auprès d'hôtes locaux dans plus de 191 pays et vivez comme là-bas, comme chez vous.</div>
+				</div>
+				<div class="row">
+					<div class="medium-10 columns medium-offset-1">
+						<div class="row">
+							<div class="medium-4 columns">Où ?</div>
+							<div class="medium-2 columns">Arrivée</div>
+							<div class="medium-2 columns">Départ</div>
+							<div class="medium-2 columns">1 voyageur</div>
+							<div class="medium-2 columns">Rechercher</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</header>	
 	
+	<div class="body-parti2">
 
-	<!-- Ici Commence la partie 1 -->
-
-	<div class="row">
-		<div class="medium-8 columns"><img src="https://placehold.it/350x150"></div>
-		<div class="medium-4 columns">
-			<h4><strong>Ouvrez la porte à un voyageur et à une nouvelle vie</strong></h4>
-			<p>gagnez de l'argent en accueillant des voyageurs</p>
-			<a href="#" class="button"><strong>Estimer mes revenus</strong></a>
+		<h3 class="text-center">Explorez le monde</h3>
+		<h5 class="text-center">Découvrez les destinations les plus prisées à travers le monde.</h5>
+		<div class="row medium-uncollapse">
+			<div class="medium-6 medium-offset-1 columns"><img src="http://placehold.it/550x250"></div>
+			<div class="medium-4 medium-offset-1 columns"><img src="http://placehold.it/250x250"></div>
 		</div>
+
+		<div class="row medium-uncollapse">
+			<div class="medium-2 medium-offset-1 columns"><img src="http://placehold.it/250x250"></div>
+			<div class="medium-5 medium-offset-1 columns"><img src="http://placehold.it/250x250"></div>
+			<div class="medium-2 medium-offset-1 columns"><img src="http://placehold.it/250x250"></div>
+		</div>
+
+
+		<div class="row">
+			<div class="medium-8 columns"><img src="https://placehold.it/350x150"></div>
+			<div class="medium-4 columns"><h1>Ouvrez la porte à un voyageur et à une nouvelle vie</h1><p>gagnez de l'argent en accueillant des voyageurs</p>
+				<a href="#" class="button">Estimer mes revenus</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="medium-12 columns"><h1>Juste pour le week-end</h1><p>Découvrez de nouveaux logements incroyables près de chez vous.</p></div>
+		</div>
+
+		<div class="row">
+			<div class="medium-4 columns">
+				<img src="https://placehold.it/250x250">
+				<div class="small-6 columns"><h4>Lille</h4></div>
+			</div>
+			<div class="medium-4 columns">
+				<img src="https://placehold.it/250x250">
+				<div class="small-6 columns"><h4>Bruxelles</h4></div></div>
+			</div>
+			<div class="medium-4 columns">
+				<img src="https://placehold.it/250x250">
+				<div class="small-6 columns"><h4>Londres</h4></div></div>
+			</div>
+		</div>
+		<a href="#" class="button">Voir toutes les destinations</a>	
 	</div>
-
-	<div class="row">
-		<div class="medium-12 lare-centered columns"><h1>Juste pour le week-end</h1><p>Découvrez de nouveaux logements incroyables près de chez vous.</p></div>
-	</div>
-
-	<div class="row">
-		<div class="medium-3 columns">
-			<img src="https://placehold.it/250x250">
-			<div class="small-6 columns"><h4>Lille</h4></div>
-		</div>
-		<div class="medium-4 columns">
-			<img src="https://placehold.it/250x250">
-			<div class="small-6 columns"><h4>Bruxelles</h4></div>
-		</div>
-		<div class="medium-4 columns">
-			<img src="https://placehold.it/250x250">
-			<div class="small-6 columns"><h4>Londres</h4></div>
-		</div>
-	</div>
-	<a href="#" class="button"><strong>Voir toutes les destinations</strong></a>
-
-	<!-- Ici commence la Partie 2 -->
 
 
 </div>
@@ -133,7 +120,6 @@
 						<li>Conditions generales et confidentialités</li>
 					</ul>
 				</div>
-				
 				<div class="medium-4 columns">
 					<h3>Découvrir</h3>
 					<ul>
@@ -146,7 +132,6 @@
 						<li>Plan du site</li>
 					</ul>
 				</div>
-
 				<div class="medium-4 columns">
 					<h3>Hébergement</h3>
 					<ul>
@@ -159,98 +144,23 @@
 				</div>
 			</div>
 
-			<hr class="bar"> </hr>
-			<div class="icone">
-				<div class="text-center"><h5>Rejoignez-nous sur</h5>
-					<div class="icone">
-
-	<div>
-		<h3 class="text-center">Explorez le monde</h3>
-		<h5 class="text-center">Découvrez les destinations les plus prisées à travers le monde.</h5>
-		<div class="row medium-uncollapse"></div>
-		<div class="medium-6 medium-offset-1 columns"><img src="http://placehold.it/550x250"></div>
-		<div class="medium-4 medium-offset-1 columns"><img src="http://placehold.it/250x250"></div>
-	</div>
-
-	<div class="row medium-uncollapse">
-		<div class="medium-2 medium-offset-1 columns"><img src="http://placehold.it/250x250"></div>
-		<div class="medium-5 medium-offset-1 columns"><img src="http://placehold.it/250x250"></div>
-		<div class="medium-2 medium-offset-1 columns"><img src="http://placehold.it/250x250"></div>
-	</div>
-
-			<!-- ici commence le footer -->
-
-	<footer>
-		<div class="row">
-			<button class="large dropdown button">Français</button>
-			<button class="large dropdown button">EUR</button>
-		</div>
-
-		<div>
-
-			<div class="row">
-				<div class="large-6 columns"></div>
-				<div class="large-6 columns">
-					<h6>Société</h6>
-					<ul>
-						<li>A propos</li>
-						<li>Carrières</li>
-						<li>Presse</li>
-						<li>Blog</li>
-						<li>Aide</li>
-						<li>Règles</li>
-						<li>Réponse aux catestrophes</li>
-						<li>Condition généralet confidentialités</li>
-					</ul>
-					<h6>Découvrir</h6>
-					<ul>
-						<li>Confiance et sécurité</li>
-						<li>Filleuls</li>
-						<li>Crédit voyage</li>
-						<li>La sélection AirBnb</li>
-						<li>Application mobile</li>
-						<li>Airbnb action</li>
-						<li>Voyage d'affaire</li>
-						<li>Plan du site</li>
-					</ul>
-					<h6>Hébergement</h6>
-					<ul>
-						<li>Pourquoi être hôte?</li>
-						<li>Hospitalité</li>
-						<li>Hébergement responsable</li>
-						<li>Sécurité à la maison</li>
-						<li>Réservation instantannée</li>
-					</ul>
-				</div>
-			</div>
-		</div>
 
 			<hr class="bar"> </hr>
 			<div class="icone">
 				<div class="text-center"><h5>Rejoignez-nous sur</h5>
 
 					<div class="icone">
-
 
 						<i class="fa fa-facebook-official" aria-hidden="true"></i>
 						<i class="fa fa-twitter-official" aria-hidden="true"></i>
 						<i class="fa fa-google" aria-hidden="true"></i>
 						<i class="fa fa-linkedin" aria-hidden="true"></i>
 						<i class="fa fa-pinterest" aria-hidden="true"></i>
+
 					</div>
 
 				</footer>
 
 			</body>
 			</html>
-
-				</div>
-			</div>
-	</footer>
-
-
-	<script src="style.js"></script>
-</body>
-</html>
-
 
