Modification du Header et de la Top Bar

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 		<div class="top-bar">
 			<div class="top-bar-left">
 				<ul class="menu">
-					<li><a href="#">Airbnb</a></li>
-					<li><i class="fa fa-search" aria-hidden="true"></i> </li>
+					<li class="menu-text"><a href="#">Airbnb</a></li>
+					<li><i class="fa fa-search" aria-hidden="true"></i></li>
 					<li><input type="search" placeholder="Où ?"></li>
 				</ul>
 			</div>
 			<div class="top-bar-right">
 				<ul class="menu">
-					<li><a href="#">Devenez Hôte</a></li>
-					<li><a href="#">Aide</a></li>
-					<li><a href="#">Inscription</a></li>
-					<li><a href="#">Connexion</a></li>
+					<li class="menu-text"><a href="#">Devenez Hôte</a></li>
+					<li class="menu-text"><a href="#">Aide</a></li>
+					<li class="menu-text"><a href="#">Inscription</a></li>
+					<li class="menu-text"><a href="#">Connexion</a></li>
 				</ul>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="medium-12 columns"><img src="https://placehold.it/1200x500" alt="Vidéo de présentation"></div>
+			<div class="medium-12 columns"><img src="https://placehold.it/1200x500" alt="Vidéo de présentation"></div> 
 			<div class="row">
 				<div class="medium-4 columns medium-centered text-center"><h2><strong>Vivez là-bas</strong></h2></div>
 			</div>
