--- a/index.html
+++ b/index.html
@@ -96,71 +96,66 @@
 
 <hr class="bar"> </hr>
 <div class="icone">
-	<div class="text-center"><h5>Rejoignez-nous sur</h5>
+	
 
-		<!-- ici commence le footer -->
+	<!-- footer -->
 
-		<footer>
-			<div class="row">
-				<button class="large dropdown button">Français</button>
-				<button class="large dropdown button">EUR</button>
+	<footer>
+		<div class="button group">
+			<button class="button">Français</button>
+			<button class="button ">EUR</button>
+		</div>
+
+		<div class="row">
+			<div class="medium-4 columns">
+				<h3>Société</h3>
+				<ul>
+					<li>A propos</li>
+					<li>Carrières</li>
+					<li>Presse</li>
+					<li>Blog</li>
+					<li>Aide</li>
+					<li>Règles</li>
+					<li>Réponses aux catastrophes</li>
+					<li>Conditions generales et confidentialités</li>
+				</ul>
 			</div>
-
-			<div class="row">
-				<div class="medium-4 columns">
-					<h3>Société</h3>
-					<ul>
-						<li>A propos</li>
-						<li>Carrières</li>
-						<li>Presse</li>
-						<li>Blog</li>
-						<li>Aide</li>
-						<li>Règles</li>
-						<li>Réponses aux catastrophes</li>
-						<li>Conditions generales et confidentialités</li>
-					</ul>
-				</div>
-				<div class="medium-4 columns">
-					<h3>Découvrir</h3>
-					<ul>
-						<li>Confiance et securité</li>
-						<li>Filleuls</li>
-						<li>La sélection airbnb</li>
-						<li>Application mobile</li>
-						<li>Airbnb action</li>
-						<li>Voyage d'affaires</li>
-						<li>Plan du site</li>
-					</ul>
-				</div>
-				<div class="medium-4 columns">
-					<h3>Hébergement</h3>
-					<ul>
-						<li>Pourquoi être hôte</li>
-						<li>Hospitalité</li>
-						<li>Hebérgement responsable</li>
-						<li>Securité à la maison</li>
-						<li>Reservation instantanée</li>
-					</ul>
-				</div>
+			<div class="medium-4 columns">
+				<h3>Découvrir</h3>
+				<ul>
+					<li>Confiance et securité</li>
+					<li>Filleuls</li>
+					<li>La sélection airbnb</li>
+					<li>Application mobile</li>
+					<li>Airbnb action</li>
+					<li>Voyage d'affaires</li>
+					<li>Plan du site</li>
+				</ul>
 			</div>
+			<div class="medium-4 columns">
+				<h3>Hébergement</h3>
+				<ul>
+					<li>Pourquoi être hôte</li>
+					<li>Hospitalité</li>
+					<li>Hebérgement responsable</li>
+					<li>Securité à la maison</li>
+					<li>Reservation instantanée</li>
+				</ul>
+			</div>
+		</div>
 
-
-			<hr class="bar"> </hr>
+		<hr class="bar"> </hr>
+		<div class="icone">
+			<div class="text-center"><h5>Rejoignez-nous sur</h5>
 			<div class="icone">
-				<div class="text-center"><h5>Rejoignez-nous sur</h5>
+					<a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-twitter-official" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+				</div>
+			</footer>
 
-					<div class="icone">
-
-						<i class="fa fa-facebook-official" aria-hidden="true"></i>
-						<i class="fa fa-twitter-official" aria-hidden="true"></i>
-						<i class="fa fa-google" aria-hidden="true"></i>
-						<i class="fa fa-linkedin" aria-hidden="true"></i>
-						<i class="fa fa-pinterest" aria-hidden="true"></i>
-
-					</div>
-
-				</footer>
-
-			</body>
-			</html>
+		</body>
+		</html>
 
