re ajout footer et parti2 body

--- a/index.html
+++ b/index.html
@@ -163,71 +163,64 @@
     </div>
 
 
-			<!-- ici commence le footer -->
+			<!-- footer -->
 
 	<footer>
+		<div class="button group">
+			<button class="button">Français</button>
+			<button class="button ">EUR</button>
+		</div>
+
 		<div class="row">
-			<button class="large dropdown button">Français</button>
-			<button class="large dropdown button">EUR</button>
-		</div>
-
-		<div>
-
-			<div class="row">
-				<div class="large-6 columns"></div>
-				<div class="large-6 columns">
-					<h6>Société</h6>
-					<ul>
-						<li>A propos</li>
-						<li>Carrières</li>
-						<li>Presse</li>
-						<li>Blog</li>
-						<li>Aide</li>
-						<li>Règles</li>
-						<li>Réponse aux catestrophes</li>
-						<li>Condition généralet confidentialités</li>
-					</ul>
-					<h6>Découvrir</h6>
-					<ul>
-						<li>Confiance et sécurité</li>
-						<li>Filleuls</li>
-						<li>Crédit voyage</li>
-						<li>La sélection AirBnb</li>
-						<li>Application mobile</li>
-						<li>Airbnb action</li>
-						<li>Voyage d'affaire</li>
-						<li>Plan du site</li>
-					</ul>
-					<h6>Hébergement</h6>
-					<ul>
-						<li>Pourquoi être hôte?</li>
-						<li>Hospitalité</li>
-						<li>Hébergement responsable</li>
-						<li>Sécurité à la maison</li>
-						<li>Réservation instantannée</li>
-					</ul>
-				</div>
+			<div class="medium-4 columns">
+				<h3>Société</h3>
+				<ul>
+					<li>A propos</li>
+					<li>Carrières</li>
+					<li>Presse</li>
+					<li>Blog</li>
+					<li>Aide</li>
+					<li>Règles</li>
+					<li>Réponses aux catastrophes</li>
+					<li>Conditions generales et confidentialités</li>
+				</ul>
+			</div>
+			<div class="medium-4 columns">
+				<h3>Découvrir</h3>
+				<ul>
+					<li>Confiance et securité</li>
+					<li>Filleuls</li>
+					<li>La sélection airbnb</li>
+					<li>Application mobile</li>
+					<li>Airbnb action</li>
+					<li>Voyage d'affaires</li>
+					<li>Plan du site</li>
+				</ul>
+			</div>
+			<div class="medium-4 columns">
+				<h3>Hébergement</h3>
+				<ul>
+					<li>Pourquoi être hôte</li>
+					<li>Hospitalité</li>
+					<li>Hebérgement responsable</li>
+					<li>Securité à la maison</li>
+					<li>Reservation instantanée</li>
+				</ul>
 			</div>
 		</div>
 
-			<hr class="bar"> </hr>
+		<hr class="bar"> </hr>
+		<div class="icone">
+			<div class="text-center"><h5>Rejoignez-nous sur</h5>
 			<div class="icone">
-				<div class="text-center"><h5>Rejoignez-nous sur</h5>
-
-					<div class="icone">
-
-						<i class="fa fa-facebook-official" aria-hidden="true"></i>
-						<i class="fa fa-twitter-official" aria-hidden="true"></i>
-						<i class="fa fa-google" aria-hidden="true"></i>
-						<i class="fa fa-linkedin" aria-hidden="true"></i>
-						<i class="fa fa-pinterest" aria-hidden="true"></i>
-					</div>
+					<a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-twitter-official" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
 				</div>
-			</div>
-	</footer>
+			</footer>
 
-
-	<script src="style.js"></script>
+<script type="style.js"></script>
 </body>
 </html>
-
