--- a/index.html
+++ b/index.html
@@ -72,37 +72,36 @@
 	<!-- Ici Commence la partie 1 -->
 
 	<div class="row">
-		<div class="medium-8 columns"><img src="https://placehold.it/350x150"></div>
-<<<<<<< HEAD
+		<div class="medium-8 columns"><img src="https://placehold.it/680x344"></div>
 		<div class="medium-4 columns"><h4><strong>Ouvrez la porte à un voyageur et à une nouvelle vie</strong></h4><p>Gagnez de l'argent en accueillant des voyageurs</p>
-=======
-		<div class="medium-4 columns">
-			<h4><strong>Ouvrez la porte à un voyageur et à une nouvelle vie</strong></h4>
-			<p>gagnez de l'argent en accueillant des voyageurs</p>
->>>>>>> 472a268b678ea7a6b982cbcd0ec93c4ad9a2e7f2
-			<a href="#" class="button"><strong>Estimer mes revenus</strong></a>
+		<a href="#" class="button large expanded"><strong>Estimer mes revenus</strong></a>
 		</div>
 	</div>
 
 	<div class="row">
-		<div class="medium-12 large-centered columns"><h3><strong>Juste pour le week-end</strong></h3><p>Découvrez de nouveaux logements incroyables près de chez vous.</p></div>
+		<div class="medium-12 large-offset-4 columns"><h3><strong>Juste pour le week-end</strong></h3><p class="text-lead">Découvrez de nouveaux logements incroyables près de chez vous.</p></div>
 	</div>
 
 	<div class="row">
-		<div class="medium-3 columns">
-			<img src="https://placehold.it/250x250">
+		<div class="medium-4 thumbnail columns">
+			<img src="https://placehold.it/328x344">
 			<div class="small-6 columns"><h4>Lille</h4></div>
 		</div>
-		<div class="medium-4 columns">
-			<img src="https://placehold.it/250x250">
+		<div class="medium-4 thumbnail columns">
+			<img src="https://placehold.it/328x344">
 			<div class="small-6 columns"><h4>Bruxelles</h4></div>
 		</div>
-		<div class="medium-4 columns">
-			<img src="https://placehold.it/250x250">
+		<div class="medium-4 thumbnail columns">
+			<img src="https://placehold.it/328x344">
 			<div class="small-6 columns"><h4>Londres</h4></div>
 		</div>
 	</div>
-	<a href="#" class="button"><strong>Voir toutes les destinations</strong></a>
+	<div class="row">
+		<div class="medium-3 large-offset-5">
+		<a href="#" class="hollow button"><strong>Voir toutes les destinations</strong></a>
+		</div>
+		<div class="medium-3 large-offset-1"></div>
+	</div>
 
 	<!-- Ici commence la Partie 2 -->
 
